--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Levels/Untitled.Untitled
 GlobalDefaultGameMode=/Game/GameMode/BP_SnakeGameMode.BP_SnakeGameMode_C
+EditorStartupMap=/Game/Levels/Untitled.Untitled
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
